SiteErrors and Split1FRC modules

--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,5 @@ dmypy.json
 PYMEcs/misc/adhoc.py
 
 PYMEcs/Acquire/Hardware/Piezos/joystick_c867_digital2.py
+
+PYMEcs/experimental/MINFLUXpara.py
