further steps to pip compatible install

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,3 +43,4 @@ Repository = "https://github.com/csoeller/PYME-extra"
 
 [project.scripts]
 PYMEconfigutils = "PYMEcs.misc.configUtils:main"
+pymex_install_plugins = "PYMEcs.misc.configUtils:install_plugins"
