pyproject.toml - workaround for missing pywin32 dep in PYME
- we make pywin32 a dependency in windows
- this is a temporary workaround for a missing pywin32 dependency in PYME proper
- this fixes the pip install w2hich otherwise bombs when installing plugins as that uses win32api

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,9 +28,10 @@ dependencies = [
     "mrcfile",
     "circle-fit",
     "alphashape",
+    "pywin32; platform_system=='Windows'", # we add a pywin32 dep to stand in for the missing one in python-microscopy for now
 ]
 
-version = "1.0.5"
+version = "1.0.5.post0"
 
 [project.optional-dependencies]
 opt = [
